--- a/home.html
+++ b/home.html
@@ -77,7 +77,38 @@
         </div>
     </div>
 
-    
+    <div class="container">
+        <div class="image-section">
+            <img src="gym11.avif" alt="Fitness Class Image">
+        </div>
+        <div class="content-section">
+            <h2>Why i-Fitness</h2>
+            <p>Unique Experiences Tailored To Your Lifestyle</p>
+            <div class="icon-section">
+                <div class="icon-item">
+                    <i class="fas fa-dumbbell"></i>
+                    <div>
+                        <h4>Wide Range of Fitness Programs</h4>
+                        <p>Our timetable offers a wide range of low to high-intensity fitness programs to suit your fitness lifestyle. There’s something for everyone!</p>
+                    </div>
+                </div>
+                <div class="icon-item">
+                    <i class="fas fa-users"></i>
+                    <div>
+                        <h4>Supportive Community</h4>
+                        <p>Enjoy a sense of belonging in a community that supports your fitness goals and reminds you that you are not alone!</p>
+                    </div>
+                </div>
+                <div class="icon-item">
+                    <i class="fas fa-gym"></i>
+                    <div>
+                        <h4>Ultra-Modern Facilities</h4>
+                        <p>We have over 200 professionally certified personal trainers and ultra-modern facilities across all our branches in Lagos, Port Harcourt, Abuja, and Ibadan.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <section class="home" id="home">
         <div class="home-content">
