--- a/home.html
+++ b/home.html
@@ -118,9 +118,7 @@
 
                 Our mission is to empower individuals through fitness, offering state-of-the-art equipment, expert trainers, and a supportive environment. Whether you're a beginner or a seasoned athlete, we strive to help you reach your potential.
 
-                From personalized training programs to a variety of group classes, we're here to help you every step of the way. Join us as we work together to make your fitness dreams a reality.
-
-                Thank you for visiting Collective Gym. We look forward to helping you on your fitness journey. Feel free to explore our website, sign up for a membership, or contact us with any questions. Together, let's achieve greatness.
+                Thank you for visiting Collective Gym. We look forward to helping you on your fitness journey. Together, let's achieve greatness.
             </p>
             <div class="social-icons">
                 <a href="https://github.com/jaykay2-4">
