--- a/gbagada.html
+++ b/gbagada.html
@@ -45,7 +45,7 @@
                     <strong>ADDRESS:</strong> PLOT 279, QMB house, by Charly boy b/stop, Oworonshoki Gbagada Expressway.
                 </p>
                 <p style="font-size: 18px;">
-                    <strong>EMAIL:</strong> INFO@IFITNESS.NG
+                    <strong>EMAIL:</strong> info@collectivegym.ng
                 </p>
                 <p style="font-size: 18px;">
                     <strong>WORKING HOURS:</strong> Mon - Fri: 6:00AM - 9:00PM | Sat: 7:00AM - 8:00PM
